--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -31,7 +31,8 @@
     "class-validator": "^0.14.3",
     "date-fns": "^4.1.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
